--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,7 +8,7 @@
         <h1><a href="">CP BLOG</a></h1>
     {% for post in posts %}
            <div>
-                <h1><a href="">{{post.title}}</a></h1>
+                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
                 <p>Published: {{ post.published_date}}</p>
                 <p>{{ post.text|linebreaksbr }}</p>
             </div>
